# ROCR-Runtime

./: CMakeLists.txt  LICENSE.txt  README.md
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt
docs/sphinx/: CMakeLists.txt
docs/sphinx/source/: conf.py  index.rst
include/: amd_hsa_common.h  amd_hsa_elf.h  amd_hsa_kernel_code.h  amd_hsa_queue.h  amd_hsa_signal.h  hsa.h  hsa_api_trace.h  hsa_ext_amd.h  hsa_ext_finalize.h  hsa_ven_amd_aqlprofile.h
src/: CMakeLists.txt  LICENSE.md  README.md  hsa-backward-compat.cmake  hsa-runtime64-config.cmake.in  hsacore.so.def  hsacore.so.link
src/DEBIAN/Binary/: postinst.in  prerm.in
src/DEBIAN/Dev/: postinst.in  prerm.in
src/RPM/: hsa-rocr.spec.in
src/RPM/Binary/: post.in  postun.in
src/RPM/Dev/: post.in  postun.in
src/cmake_modules/: FindLibElf.cmake  hsa_common.cmake  utils.cmake
src/core/common/: hsa_table_interface.cpp  shared.cpp  shared.h
src/core/inc/: agent.h  amd_aql_queue.h  amd_blit_kernel.h  amd_blit_sdma.h  amd_blit_shaders.h  amd_cpu_agent.h  amd_elf_image.hpp  amd_filter_device.h  amd_gpu_agent.h  amd_gpu_pm4.h  amd_gpu_shaders.h  amd_hsa_code.hpp  amd_hsa_loader.hpp  amd_loader_context.hpp  amd_memory_region.h  amd_topology.h  amd_trap_handler_v1.h  blit.h  cache.h  checked.h  default_signal.h  exceptions.h  host_queue.h  hsa_api_trace_int.h  hsa_ext_amd_impl.h  hsa_ext_interface.h  hsa_internal.h  hsa_table_interface.h  hsa_ven_amd_loader_impl.h  intercept_queue.h  interrupt_signal.h  ipc_signal.h  isa.h  memory_region.h  queue.h  registers.h  runtime.h  scratch_cache.h  signal.h  svm_profiler.h
src/core/runtime/: amd_aql_queue.cpp  amd_blit_kernel.cpp  amd_blit_sdma.cpp  amd_cpu_agent.cpp  amd_filter_device.cpp  amd_gpu_agent.cpp  amd_hsa_loader.cpp  amd_loader_context.cpp  amd_memory_region.cpp  amd_topology.cpp  cache.cpp  default_signal.cpp  host_queue.cpp  hsa.cpp  hsa_api_trace.cpp  hsa_ext_amd.cpp  hsa_ext_interface.cpp  hsa_ven_amd_loader.cpp  intercept_queue.cpp  (+7 more)
src/image/: blit_kernel.cpp  blit_kernel.h  blit_object_gfx7xx.cpp  blit_object_gfx8xx.cpp  blit_object_gfx9xx.cpp  device_info.cpp  device_info.h  hsa_ext_image.cpp  image_lut.h  image_lut_gfx11.cpp  image_lut_gfx11.h  image_lut_kv.cpp  image_lut_kv.h  image_manager.cpp  image_manager.h  image_manager_ai.cpp  image_manager_ai.h  image_manager_gfx11.cpp  image_manager_gfx11.h  image_manager_kv.cpp  image_manager_kv.h  image_manager_nv.cpp  image_manager_nv.h  image_runtime.cpp  image_runtime.h  resource.h  resource_ai.h  resource_gfx11.h  resource_kv.h  resource_nv.h  util.h
src/inc/: hsa.h
src/libamdhsacode/: amd_elf_image.cpp  amd_hsa_code.cpp  amd_hsa_code_util.cpp  amd_hsa_code_util.hpp  amd_hsa_locks.cpp  amd_hsa_locks.hpp  amd_options.cpp  amd_options.hpp
src/loader/: AMDHSAKernelDescriptor.h  executable.cpp  executable.hpp
tools/cmake/: FindSphinx.cmake
(+58 files in other folders)
